Added theme and toggle button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
   </head>
   <body>
     <header>
-      <img src="img/face.jpeg" id="face" alt="Picture of Jeffrey" />
+      <span id="logo-toggle">
+        <img src="img/face.jpeg" id="face" alt="Picture of Jeffrey" />
+        <i class="fa-solid fa-robot" id="robot"></i>
+        <div class="btn-holder">
+          <div class="btn-circle"></div>
+          <input type="checkbox" class="checkbox"></div>
+      </span>
       <h1 id="head-name">Jeffrey Woods</h1>
       <div id="icons">
         <i class="fa-solid fa-envelope"></i>
