--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
       src="https://kit.fontawesome.com/590500020a.js"
       crossorigin="anonymous"
     ></script>
-    <script async src="js/script.js"></script>
+    <script async src="js/main.js"></script>
+    <script async src="js/page.js"></script>
+    <script async src="js/validation.js"></script>
   </head>
   <body>
     <header>
