--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     ></script>
     <script async src="js/main.js"></script>
     <script async src="js/page.js"></script>
-    <script async src="js/validation.js"></script>
   </head>
   <body>
     <header>
@@ -34,6 +33,7 @@
         <li><a href="#home">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#blog">Blog</a></li>
+        <li><a href="guestbook.html" id="no-js">Guestbook</a></li>
       </ul>
     </nav>
     <main>
